--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@ a,
                                     <div class="home-project-name">
                                         <h2 class="title-cards-how">3. Swap $SOL for $GRANNY</h2>
                                         <div class="opacity-80">
-                                            <p class="text-size-medium">Tap the SWAP icon in your Phantom wallet and paste the $GRANNY token address. Swap your $SOL for $GRANNY<br/></p>
+                                            <p class="text-size-medium">Visit LetsBONK.fun and paste Granny`s token address. Swap your $SOL for $GRANNY<br/></p>
                                         </div>
                                     </div>
                                 </div>
