--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@ a,
                                     <div class="home-project-name">
                                         <h2 class="title-cards-how">Swap $SOL for $NANA</h2>
                                         <div class="opacity-80">
-                                            <p class="text-size-medium">Tap the SWAP in LetsBonk.fun. Swap your $SOL for $NANA<br/></p>
+                                            <p class="text-size-medium">Tap the SWAP in Jupiter and Swap your $SOL for $NANA<br/></p>
                                         </div>
                                     </div>
                                 </div>
