--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@ a,
                                 </a>
                             </div>
                             <div class="button-group buy-now">
-                                <a id="w-node-_3a10a6d4-8e83-343e-9075-f760ae0b7e93-ae0b7e8a" href="https://x.com/NANA_Meme_" target="_blank" class="btn-parent w-inline-block">
+                                <a id="w-node-_3a10a6d4-8e83-343e-9075-f760ae0b7e93-ae0b7e8a" href="https://x.com/NANA_0FFICIAL" target="_blank" class="btn-parent w-inline-block">
                                     <div class="code-embed w-embed"><svg width="100%" id="Capa_1" fill="currentcolor" enable-background="new 0 0 1226.37 1226.37" viewBox="0 0 1226.37 1226.37" xmlns="http://www.w3.org/2000/svg"><path d="m727.348 519.284 446.727-519.284h-105.86l-387.893 450.887-309.809-450.887h-357.328l468.492 681.821-468.492 544.549h105.866l409.625-476.152 327.181 476.152h357.328l-485.863-707.086zm-144.998 168.544-47.468-67.894-377.686-540.24h162.604l304.797 435.991 47.468 67.894 396.2 566.721h-162.604l-323.311-462.446z"/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/></svg></div>
                                 </a>
                                 <a id="w-node-_3a10a6d4-8e83-343e-9075-f760ae0b7e99-ae0b7e8a" href="https://t.me/NANA_0FFICIAL" target="_blank" class="btn-parent w-inline-block">
@@ -970,7 +970,7 @@ a,
                             <div class="max-width-xlarge"></div>
                             <div class="button-group buy-now">
                                 
-                                <a id="w-node-_3a10a6d4-8e83-343e-9075-f760ae0b7e93-ae0b7e8a" href="https://x.com/NANA_Meme_" target="_blank" class="btn-parent w-inline-block">
+                                <a id="w-node-_3a10a6d4-8e83-343e-9075-f760ae0b7e93-ae0b7e8a" href="https://x.com/NANA_0FFICIAL" target="_blank" class="btn-parent w-inline-block">
                                     <div class="code-embed w-embed"><svg width="100%" id="Capa_1" fill="currentcolor" enable-background="new 0 0 1226.37 1226.37" viewBox="0 0 1226.37 1226.37" xmlns="http://www.w3.org/2000/svg"><path d="m727.348 519.284 446.727-519.284h-105.86l-387.893 450.887-309.809-450.887h-357.328l468.492 681.821-468.492 544.549h105.866l409.625-476.152 327.181 476.152h357.328l-485.863-707.086zm-144.998 168.544-47.468-67.894-377.686-540.24h162.604l304.797 435.991 47.468 67.894 396.2 566.721h-162.604l-323.311-462.446z"/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/></svg></div>
                                 </a>
                                 
