--- a/index.html
+++ b/index.html
@@ -594,10 +594,10 @@ a,
 <g>
 </g>
 </svg></div>
-                                <p fs-copyclip-element="copy-this-2" id="w-node-fb0b9d15-761b-3c1d-8d35-fd0c29698c44-e19a55ae" class="fs-copyclip_text">eYVSpzQQKjezDPaEMiPSRbKwQ77iYTfvPsb1Fw1bonk</p>
+                                <p fs-copyclip-element="copy-this-2" id="w-node-fb0b9d15-761b-3c1d-8d35-fd0c29698c44-e19a55ae" class="fs-copyclip_text">E3K3TojnWSJiLwn3ZepqdYGcYNAHKmC4gVDGYd6feA43</p>
                             </div>
                             <div class="div-button-hero">
-                                <a href="https://letsbonk.fun/token/eYVSpzQQKjezDPaEMiPSRbKwQ77iYTfvPsb1Fw1bonk" style="opacity:0" target="_blank" class="button-block-01 w-inline-block">
+                                <a href="https://dexscreener.com/solana/8xzs4y5uadz9s3ftwn4cto6uszhhyw3psh7efjwweqb8" style="opacity:0" target="_blank" class="button-block-01 w-inline-block">
                                     <div class="button-text-01">BUY NOW</div>
                                     <div class="button-hover-box-01"></div>
                                 </a>
@@ -894,7 +894,7 @@ a,
                                             <p class="text-size-medium">Welcome to the #GRAN Army!<br/></p>
                                         </div>
                                         <div class="div-button-how">
-                                            <a href="https://letsbonk.fun/token/eYVSpzQQKjezDPaEMiPSRbKwQ77iYTfvPsb1Fw1bonk" target="_blank" class="button-block-01 w-inline-block">
+                                            <a href="https://dexscreener.com/solana/8xzs4y5uadz9s3ftwn4cto6uszhhyw3psh7efjwweqb8" target="_blank" class="button-block-01 w-inline-block">
                                                 <div class="button-text-01">GET STARTED</div>
                                                 <div class="button-hover-box-01"></div>
                                             </a>
@@ -954,7 +954,7 @@ a,
             </div>
         </div>
         <div data-w-id="cc438117-34b0-9d29-78df-3b6065b49fad" class="div-button-big">
-            <a href="https://letsbonk.fun/token/eYVSpzQQKjezDPaEMiPSRbKwQ77iYTfvPsb1Fw1bonk" target="_blank" class="button-block-01 w-inline-block">
+            <a href="https://dexscreener.com/solana/8xzs4y5uadz9s3ftwn4cto6uszhhyw3psh7efjwweqb8" target="_blank" class="button-block-01 w-inline-block">
                 <div class="button-text-01">BUY $GRAN NOW!</div>
                 <div class="button-hover-box-01"></div>
             </a>
